# Cpp_MNIST_OCR_NN_in_a_weekend_MWE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  diff.txt  ff.params  links.md
MNIST_dataset/: CMakeLists.txt
doc/: journal.md
my_first_cpp_NN_experiment/: CMakeLists.txt  my_first_cpp_NN_experiment.cpp  my_first_cpp_NN_experiment.h
my_first_cpp_NN_experiment/MNIST_dataset/: README.md
source/: CCELossNode.cpp  CCELossNode.h  CMakeLists.txt  FFNode.cpp  FFNode.h  GDOptimizer.cpp  GDOptimizer.h  MNIST.cpp  MNIST.h  main.cpp  model.cpp  model.h  my_first_cpp_NN_experiment.h
